--- a/help.html
+++ b/help.html
@@ -10,5 +10,6 @@
         <h1>
             hello world my name is joy
         </h1>
+        <a href="https://google.com">hell world</a>
     </body>
 </html>
